// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RetirementDetails renders correctly issuances 1`] = `
<div>
  <div
    class="css-gsocru"
  >
    <div
      class="css-h9i6sp"
    >
      <div
        class="css-1i18okm"
      >
        <h3
          class="chakra-heading css-zux3ex"
        >
          Issuances
        </h3>
      </div>
    </div>
    <div
      class="css-xsnn5"
    >
      <table
        class="chakra-table searchTableSmall css-0"
      >
        <thead
          class="css-hgvkgs"
        >
          <tr
            class="css-0"
          >
            <th
              class="css-0"
            >
              <div
                class="css-0"
              >
                Vintage
              </div>
            </th>
            <th
              class="css-0"
            >
              <div
                class="css-0"
              >
                Quantity
              </div>
            </th>
            <th
              class="css-0"
            >
              <div
                class="css-0"
              >
                Units Available
              </div>
            </th>
            <th
              class="css-0"
            >
              <div
                class="css-0"
              >
                Verification Report Date
              </div>
            </th>
            <th
              class="css-0"
            >
              <div
                class="css-0"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="css-oznbim"
        >
          <tr
            class="css-18gfgn2"
            data-testid="issuance-row"
          >
            <td
              class="css-0"
            >
              2010
            </td>
            <td
              class="css-0"
            >
              191
            </td>
            <td
              class="css-0"
            >
              191
            </td>
            <td
              class="css-0"
            >
              2020/03/04
            </td>
            <td
              class="css-0"
            >
              <a
                class="chakra-link css-0"
                href="/issuance?id=00cfede2-5701-4237-b7cf-8b962ba02aa5"
              >
                More Details
              </a>
            </td>
          </tr>
          <tr
            class="css-18gfgn2"
            data-testid="issuance-row"
          >
            <td
              class="css-0"
            >
              2015
            </td>
            <td
              class="css-0"
            >
              1,102
            </td>
            <td
              class="css-0"
            >
              0
            </td>
            <td
              class="css-0"
            >
              2020/03/04
            </td>
            <td
              class="css-0"
            >
              <a
                class="chakra-link css-0"
                href="/issuance?id=136cadbc-83a5-4c43-a172-baf7770796fc"
              >
                More Details
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RetirementDetails renders correctly issuances and row click 1`] = `
<div>
  <div
    class="css-gsocru"
  >
    <div
      class="css-h9i6sp"
    >
      <div
        class="css-1i18okm"
      >
        <h3
          class="chakra-heading css-zux3ex"
        >
          Issuances
        </h3>
      </div>
    </div>
    <div
      class="css-xsnn5"
    >
      <table
        class="chakra-table searchTableSmall css-0"
      >
        <thead
          class="css-hgvkgs"
        >
          <tr
            class="css-0"
          >
            <th
              class="css-0"
            >
              <div
                class="css-0"
              >
                Vintage
              </div>
            </th>
            <th
              class="css-0"
            >
              <div
                class="css-0"
              >
                Quantity
              </div>
            </th>
            <th
              class="css-0"
            >
              <div
                class="css-0"
              >
                Units Available
              </div>
            </th>
            <th
              class="css-0"
            >
              <div
                class="css-0"
              >
                Verification Report Date
              </div>
            </th>
            <th
              class="css-0"
            >
              <div
                class="css-0"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="css-oznbim"
        >
          <tr
            class="css-18gfgn2"
            data-testid="issuance-row"
          >
            <td
              class="css-0"
            >
              2010
            </td>
            <td
              class="css-0"
            >
              191
            </td>
            <td
              class="css-0"
            >
              191
            </td>
            <td
              class="css-0"
            >
              2020/03/04
            </td>
            <td
              class="css-0"
            >
              <a
                class="chakra-link css-0"
                href="/issuance?id=00cfede2-5701-4237-b7cf-8b962ba02aa5"
              >
                More Details
              </a>
            </td>
          </tr>
          <tr
            class="css-18gfgn2"
            data-testid="issuance-row"
          >
            <td
              class="css-0"
            >
              2015
            </td>
            <td
              class="css-0"
            >
              1,102
            </td>
            <td
              class="css-0"
            >
              0
            </td>
            <td
              class="css-0"
            >
              2020/03/04
            </td>
            <td
              class="css-0"
            >
              <a
                class="chakra-link css-0"
                href="/issuance?id=136cadbc-83a5-4c43-a172-baf7770796fc"
              >
                More Details
              </a>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`RetirementDetails renders correctly with empty array 1`] = `
<div>
  <div
    class="css-gsocru"
  >
    <div
      class="css-h9i6sp"
    >
      <div
        class="css-1i18okm"
      >
        <h3
          class="chakra-heading css-zux3ex"
        >
          Issuances
        </h3>
      </div>
    </div>
    <div
      class="css-xsnn5"
    >
      <table
        class="chakra-table searchTableSmall css-0"
      >
        <thead
          class="css-hgvkgs"
        >
          <tr
            class="css-0"
          >
            <th
              class="css-0"
            >
              <div
                class="css-0"
              >
                Vintage
              </div>
            </th>
            <th
              class="css-0"
            >
              <div
                class="css-0"
              >
                Quantity
              </div>
            </th>
            <th
              class="css-0"
            >
              <div
                class="css-0"
              >
                Units Available
              </div>
            </th>
            <th
              class="css-0"
            >
              <div
                class="css-0"
              >
                Verification Report Date
              </div>
            </th>
            <th
              class="css-0"
            >
              <div
                class="css-0"
              />
            </th>
          </tr>
        </thead>
        <tbody
          class="css-oznbim"
        />
      </table>
    </div>
  </div>
</div>
`;
